--- a/index.html
+++ b/index.html
@@ -1,4 +1,75 @@
-<DOCTYPE html>
-<html>
-  <h1> Hello </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yeo Shen Kai - Personal Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 1em;
+        }
+
+        section {
+            max-width: 800px;
+            margin: 2em auto;
+            padding: 1em;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1, h2, h3 {
+            color: #333;
+        }
+
+        footer {
+            text-align: center;
+            padding: 1em;
+            background-color: #333;
+            color: #fff;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Yeo Shen Kai</h1>
+        <p>Accounting Student in the National University of Singapore</p>
+    </header>
+
+    <section>
+        <h2>About Me</h2>
+        <p>
+            Welcome to my personal website! I am passionate about web development, photography, and exploring new things.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget justo vel odio accumsan tincidunt at vel justo.
+        </p>
+    </section>
+
+    <section>
+        <h2>Portfolio</h2>
+        <!-- Add your portfolio items here -->
+        <p>Coming soon...</p>
+    </section>
+
+    <section>
+        <h2>Contact</h2>
+        <p>
+            Feel free to reach out to me via email at <a href="yeoshenkai@u.nus.edu">yeoshenkai@u.nus.edu</a>.
+        </p>
+    </section>
+
+    <footer>
+        &copy; 2024 Yeo Shen Kai
+    </footer>
+
+</body>
 </html>
